images endpoint; small changes; spec update
